--- a/my/src/components/Header/Header.module.css
+++ b/my/src/components/Header/Header.module.css
@@ -1,8 +1,17 @@
 .header {
   grid-area: h;
-  background-color: aquamarine;
+  background-color: yellowgreen;
 }
 
 .header img {
   width: 100px;
+}
+
+.loginBlock {
+  float: right;
+
+}
+
+.loginBlock a {
+  color: brown;
 }
