--- a/my/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/my/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,13 @@
 .item{
     padding: 10px;
 }
+.mainFoto{
+    max-width: 200px;
+    max-height: 300px;
+}
+.contacts{
+    padding-left: 15px;
+}
+.errorMessage {
+    color: yellow;
+}
