--- a/my/src/components/Header/Header.module.css
+++ b/my/src/components/Header/Header.module.css
@@ -3,15 +3,41 @@
   background-color: yellowgreen;
 }
 
-.header img {
-  width: 100px;
+
+.wrapper {
+  width: 1200px;
+  margin:0 auto;
+  display: grid;
+  grid-template-areas: 
+  'h h l'
+  ;
+  grid-template-rows: 60px 1fr 100px;
+  grid-gap: 20px;
 }
 
 .loginBlock {
-  float: right;
+  grid-area: l;
+  padding: 15px;
+  text-align: right;
+  
+ 
 
 }
+.header img {
+  width: 100px;
+  text-align: left;
+  padding: 15;
+}
+
 
 .loginBlock a {
   color: brown;
 }
+.profetion {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 5px;
+  text-align: center;
+  font-family:Georgia, 'Times New Roman', Times, serif
+}
+
